# cxx-cloth-simulation-old

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  cxx-cloth-simulation.sln  meson.build
assets/: config.ini
cxx-cloth-simulation/: CameraController.h  cxx-cloth-simulation.vcxproj  cxx-cloth-simulation.vcxproj.filters  macro.h  main.cpp  math.cpp  math.h  motion_system.cpp  motion_system.h  openGL.cpp  openGL.h
includes/: BVH.h  Camera.h  Grid.h  cloth.h  constants.h  macro.h  openGL.h
includes/3D/: camera.h  camera_controls.h  graphics.h  grid.h  openGL.h  shader.h
includes/maths/: common.h  math.h  matrix.h  quaternion.h  simd.h  vector.h
includes/physics/: angular_system.h  constants.h  linear_system.h  motion_system.h
includes/tools/: config.h  toolbox.h
sources/: BVH.cpp  cloth.cpp  main.cpp  openGL.cpp
sources/3D/: camera.cpp  camera_controls.cpp  graphics.cpp  grid.cpp  openGL.cpp  shader.cpp
sources/maths/: matrix.cpp  quaternion.cpp  vector.cpp
sources/physics/: angular_system.cpp  linear_system.cpp
sources/tools/: config.cpp  toolbox.cpp
